==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

v6.1.9 [wip]
. (kfsone) Tell the user when we rebulid the cache (-q to silence)
. (gulasch) Stations and distances
. (kfsone) Mineral and Microbial are now in the correct order,
. (kfsone) Big documentation cleanup,
. (mhuges) Added '--stations' to 'nav' to show a station count,
. (kfsone) Added '--ages' option to 'local' to show price data age,

v6.1.8 Dec 09 2014
. (kfsone) Huge performance improvement to "nav",
. (kfsone) Performance improvement to "run",
. (kfsone) #79 support for "--avoid" in the "nav" command,
. (kfsone) Download counter to "import", use -q to silence it,
. (kfsone) Fixed case-sensitivity matching station names that changed,
. (kfsone) 60 new stations,
. (kfsone) "update -G" now takes "-wx" and "-wy" arguments for setting the
  position of the GUI window. Try -wx=-220 -wy=220,
. (kfsone) Updated config.sh and tdupd to take advantage of -wx and -wy
. (eggplant) More stations and distances,

v6.1.7 Dec 07 2014
. (kfsone) Added "scripts" directory with bash scripts
  See scripts/README.txt
. (kfsone) Allow bigger price differences for most costly items in the UI,
  thanks to Bariri for the reports
. (eggplant) More station data

v6.1.6 Dec 06 2014
. (gulasch) Station additions, corrections and distances
. (kfsone) Added '--ages' option to "buy" command to show data age
. (kfsone) Fix for line-numbers in .prices files sometimes being incorrect
. (kfsone) Added "--start-jumps" (-s) option to "run" command which will
  use actively trading stations within that number of jumps of your
  specified system/station.
. (kfsone) Added "--empty" to "run" command to tell it how far you can
  jump when carrying zero cargo.
. (kfsone) Include origin system in "local" command output (works well
  with -v to list local stations)